# 50b-hub

./: .gitignore  .gitmodules  main.py  package.json
Domain/: package.json  proto_test.py  pyproject.toml
Domain/schemas/: domain.proto
Hub/: .env.example  Procfile  README.md  main.py  pyproject.toml  requirements.txt
Hub/auth/: auth.py
Hub/config/: database.py
Hub/messages/: proof.py  verification.py
Hub/models/: id.py  proof_request.py  user.py
Hub/routes/: proof_requests.py  users.py
Hub/schemas/: proof_request_schema.py  user_schema.py
Hub/services/: queue_service.py  user_service.py
Parser/: circuit.protobuf  main.py  pyproject.toml
Parser/libs/: pika_client.py
Parser/messages/: circuit.py  graph.py
Parser/protobuffer/: Circuit_pb2.py
Parser/services/: protobuffer_service.py  queue_service.py  s3_service.py  split_service.py
Protobuffer/: package.json  proto_test.py
Protobuffer/schemas/: Circuit.proto
Verifier/: main.py  pyproject.toml
Verifier/messages/: proof.py
Verifier/services/: verify_service.py
Worker/: Procfile  main.py  pyproject.toml
Worker/messages/: chunk.py
Worker/models/: iris_model.onnx
Worker/services/: proof_service.py  protobuffer_service.py
auth/: auth.py
env/: pyvenv.cfg
models/: circuits.py  user.py
routes/: circuits.py
schema/: schemas.py
services/: user_service.py
web/: package-lock.json  package.json
web/src/app/: page.tsx
web/src/app/buy/: page.tsx
web/src/app/login/: page.tsx
web/src/app/me/: page.tsx
web/src/app/requestProof/: page.tsx
web/src/app/signin/: page.tsx
web/src/app/signup/: page.tsx
web/src/components/: Header.tsx  JsonInputComponent.tsx  WalletConnect.tsx
web/src/utils/: Providers.tsx
web/utils/: json.ts
