[tool.poetry]
name = "50b-hub"
version = "0.1.0"
description = ""
authors = ["AE Studio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pymongo = {extras = ["srv"], version = "^4.7.3"}
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aio-pika = "^9.4.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
