[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["AE Studio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
aio-pika = "^9.4.2"
protobuf = "^5.27.2"
sympy = "^1.13.0"
onnx = "^1.16.1"
onnxruntime = "^1.18.1"
graphviz = "^0.20.3"
dohko = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
